# rust-todo-app

./: .env  Cargo.toml  Dockerfile
kubernetes_config/: postgres.yaml  postgres_config.yaml  postgres_secret.yaml  todo_app.yaml
migrations/2022-02-07-005038_add_board/: up.sql
migrations/2022-02-14-170812_add_task/: up.sql
migrations/2022-03-03-012019_create_list/: up.sql
src/: main.rs  schema.rs
src/adapters/api/: server.rs
src/adapters/api/handlers/: board.rs  board_handler.rs  mod.rs  task_handler.rs
src/adapters/api/routes/: board.rs  board_routes.rs  mod.rs  task_routes.rs
src/adapters/db/: mod.rs
src/adapters/db/orms/: board.rs
src/adapters/db/repositories/: board_repository_impl.rs  mod.rs  task_repository_impl.rs
src/api/: server.rs
src/api/controllers/: board_controller.rs  mod.rs
src/api/routes/: board.rs  mod.rs
src/config/app_state/: app_state.rs  mod.rs
src/domain/ports/: mod.rs  use_case.rs
src/domain/ports/repositories/: board_repository.rs  list_repository.rs  mod.rs  task_repository.rs
src/domain/use_cases/: create_board.rs  mod.rs  update_board.rs
src/domain/use_cases/list/: create_list.rs  mod.rs
src/domain/use_cases/task/: create_task.rs  mod.rs
